<resources>
    <string name="app_name">PlantApp</string>
    <string name="header_text">Welcome to <b>PlantApp</b></string>
    <string name="description_text">Identify more than 3000+ plants and 88% accuracy.</string>
    <string name="get_started">Get Started</string>
    <string name="button_continue">Continue</string>
    <string name="bottom_text">
        By tapping next, you are agreeing to PlantID <u>Terms of Use</u> &amp; <u> Privacy Policy</u>.
    </string>

    <string name="onboarding_text">Take a photo to <b>identify \n</b>the plant! </string>

    <string name="onboardingTwo_text">Get plant  <b>care guides</b></string>

    <string name="home_greeting">Hi, plant lover!</string>
    <string name="home_greeting_title">Good Afternoon! 🌤</string>
    <string name="home_search_hint">Search for plants</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_diagnose">Diagnose</string>
    <string name="bottom_nav_my_garden">My Garden</string>
    <string name="bottom_nav_profile">Profile</string>

</resources>