<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTopHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/homePage_constraint_width"
        android:background="@drawable/home_page_top_background"
        android:layout_marginTop="@dimen/homePage_margin_top_46"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textGreeting"
            android:layout_width="@dimen/homePage_textView_width"
            android:layout_height="@dimen/homePage_textView_height"
            android:text="@string/home_greeting"
            android:textColor="@color/black"
            android:textSize="@dimen/homePage_text_size_16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/homePage_margin_start_16"
            android:layout_marginTop="@dimen/homePage_margin_top_16" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="@dimen/homePage_textView_width"
            android:layout_height="@dimen/homePage_textView_height_28"
            android:text="@string/home_greeting_title"
            android:textStyle="bold"
            android:textSize="@dimen/homePage_text_size_22sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textGreeting"
            app:layout_constraintStart_toStartOf="@id/textGreeting"
            android:layout_marginTop="@dimen/homePage_margin_top_4" />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="@dimen/homePage_edittext_width"
            android:layout_height="@dimen/homePage_edittext_height"
            android:hint="@string/home_search_hint"
            android:background="@drawable/search_background"
            android:paddingStart="@dimen/homePage_padding_start_12"
            android:drawableStart="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/homePage_margin_top_12" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageBannerPremium"
        android:layout_width="@dimen/homePage_banner_width"
        android:layout_height="@dimen/homePage_banner_height"
        android:src="@drawable/premium_box"
        app:layout_constraintTop_toBottomOf="@id/layoutTopHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/homePage_margin_top_16" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerQuestions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_question_card"
        app:layout_constraintTop_toBottomOf="@id/imageBannerPremium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/homePage_margin_top_16"
        android:layout_marginStart="@dimen/homePage_margin_horizontal_8"
        android:layout_marginEnd="@dimen/homePage_margin_horizontal_8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPlantCards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_plant_card"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/recyclerQuestions"
        app:layout_constraintBottom_toTopOf="@id/layoutBottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/homePage_margin_all_8" />

    <ImageView
        android:id="@+id/fabScan"
        android:layout_width="@dimen/homePage_fab_size"
        android:layout_height="@dimen/homePage_fab_size"
        android:src="@drawable/ic_scan"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/homePage_margin_bottom_28" />

    <LinearLayout
        android:id="@+id/layoutBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/homePage_padding_bottom_8"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/customBottomNav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homePage_bottom_nav_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/homePage_padding_horizontal_12"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/homePage_icon_size"
                    android:layout_height="@dimen/homePage_icon_size"
                    android:src="@drawable/home_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_home"
                    android:textColor="@color/active_green"
                    android:textSize="@dimen/homePage_text_size_12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/homePage_icon_size"
                    android:layout_height="@dimen/homePage_icon_size"
                    android:src="@drawable/ic_diagnose" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_diagnose"
                    android:textColor="@color/inactive_gray"
                    android:textSize="@dimen/homePage_text_size_12sp" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/homePage_icon_size"
                    android:layout_height="@dimen/homePage_icon_size"
                    android:src="@drawable/ic_garden" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_my_garden"
                    android:textColor="@color/inactive_gray"
                    android:textSize="@dimen/homePage_text_size_12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/homePage_icon_size"
                    android:layout_height="@dimen/homePage_icon_size"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_profile"
                    android:textColor="@color/inactive_gray"
                    android:textSize="@dimen/homePage_text_size_12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>